added salesiq chat widget

--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
     <div class="contact-cards">
       <div class="contact-card"><h3>Call Us</h3><p>+91 9659888481</p></div>
       <div class="contact-card"><h3>WhatsApp</h3><p>+91 9659888481</p></div>
-      <div class="contact-card"><h3>Instagram</h3><p>@aariworks_studio</p></div>
-      <div class="contact-card"><h3>Email</h3><p>.com</p></div>
+      <div class="contact-card"><h3>Instagram</h3><p>@NELLAI_AARI_WORKS</p></div>
+      <div class="contact-card"><h3>Email</h3><p>dhanaaariwork@gmail.com</p></div>
     </div>
   </section>
 
   <footer><p>© 2024 Dhana Designer Studios and Aari Works. All rights reserved.</p></footer>
+  <script>window.$zoho=window.$zoho || {};$zoho.salesiq=$zoho.salesiq||{ready:function(){}}</script><script id="zsiqscript" src="https://salesiq.zohopublic.in/widget?wc=siq69e47479c59755db3a4e097a2411722be4c5053dff46f75f2bef2dc89b3c38c4" defer></script>
 </body>
 </html>
